fixing: hover problem on mobile device

--- a/blocks/gallery.css
+++ b/blocks/gallery.css
@@ -31,7 +31,7 @@
 
 .gallery__delete:hover {
   opacity: 0.7;
-  transition: opacity 0.5s;
+  transition: opacity 0.5s ease;
 }
 
 .gallery__picture {
@@ -78,7 +78,7 @@
 
 .gallery__love:hover {
   opacity: 50%;
-  transition: opacity 0.3s;
+  transition: opacity 0.3s ease;
 }
 
 @media screen and (min-width: 320px) and (max-width: 879px) {
