--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -48,7 +48,7 @@
 
 .profile__button:hover {
   opacity: 0.6;
-  transition: opacity 0.2s;
+  transition: opacity 0.2s ease;
 }
 
 .profile__button_edit {
